@@ -46,6 +46,7 @@
 * Adyen: Add mcc field [jcreiff] #4926
 * Quickbooks: Remove raise OAuth from extract_response_body_or_raise [almalee24] #4935
 * Cecabank: Add new Cecabank gateway to use the JSON REST API [sinourain] #4920
+* Cecabank: Add 3DS Global to Cecabank REST JSON gateway [sinourain] #4940
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
